css, js -> public 디렉토리로 이동

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -60,9 +60,9 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="../public/js/jquery-2.1.1.min.js"></script>
     <!-- Initialize Swiper -->
-    <script src="./js/swiper.min.js"></script>
+    <script src="../public/js/swiper.min.js"></script>
 
     <script>
         $(document).ready(function () {
