--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagine Sensor for the Blind</title>
-    <link rel="stylesheet" type="text/css" href="../public/css/style.css">
-    <link rel="stylesheet" type="text/css" href="../public/css/swiper.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/swiper.css">
 </head>
 
 <body>
@@ -60,9 +60,9 @@
     </div>
 
     <!-- Swiper JS -->
-    <script src="../public/js/jquery-2.1.1.min.js"></script>
+    <script src="./js/jquery-2.1.1.min.js"></script>
     <!-- Initialize Swiper -->
-    <script src="../public/js/swiper.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
 
     <script>
         $(document).ready(function () {
