--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ISB</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/swiper.css">
 </head>
 <body>
-
-</body>
-</html>
+<nav>
+    <div>
+        <!--<a href=""><img src="./img/logo.png" alt="ISB"></a>-->
+        <ul class="menu">
+            <li><a href="#1">HOME</a></li>
+            <li><a href="#2">ABOUT US</a></li>
+            <li><a href="#3">TEAM</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="navbar">
+    <a href="#">
+        <span class="bar-1"></span>
+        <span class="bar-2"></span>
+        <span class="bar-3"></span>
+    </a>
+</div>
+<div class="m_menu">
+    <ul>
+        <li><a href="#1">HOME</a></li>
+        <li><a href="#2">ABOUT US</a></li>
+        <li><a href="#3">TEAM</a></li>
+    </ul>
+    <div>
+        <h3>Team Name</h3>
+        <p>Stitch Lilo</p>
+        <h3>EMAIL</h3>
+        <p><a href="kratew@naver.com">kratew@naver.com</a></p>
+    </div>
+</div>
+<span class="black_bg" style=""></span>
