--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -10,7 +10,7 @@
 <body>
 <nav>
     <div>
-        <!--<a href=""><img src="./img/logo.png" alt="ISB"></a>-->
+        <a href=""><img src="./img/logo.png" alt="ISB" style="width: 120px; height: 70px"></a>
         <ul class="menu">
             <li><a href="#1">HOME</a></li>
             <li><a href="#2">ABOUT US</a></li>
