--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,13 +21,14 @@ body { overflow-x:hidden; }
 div#main { height:100%; }
 section { height:100%; background-size: cover !important; background-position: center !important; padding-top: 135px; box-sizing: border-box; position: relative; overflow: hidden; transition: all .3s ease; }
 section:after {content:""; display:block; clear:both;}
-.section1 { background: url('../img/bg1.jpg') no-repeat; }
+.section1 { background: url('../img/main_bg.jpg') no-repeat; } /*수정*/
 .section2 { background-color: #edf6f7; }
 .section3 { background-color: #1f5ba9; }
 .section4 { background-color: #15bebe; }
 .section5 { background-color: #e3e3e8; }
 .section6 { background: url('../img/bg6.jpg') no-repeat; }
-.section7 { background: url('../img/bg7.jpg') no-repeat; }
+.section7 { background-color: #1f5ba9; } /*수정*/
+/* .section7 { background: url('../img/bg7.jpg') no-repeat; } */
 .section8 { background: url('../img/bg8.jpg') no-repeat; }
 .section9  { background-color: #575757; }
 
