--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISB</title>
+    <title>Imagine Sensor for the Blind</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/swiper.css">
 </head>
 <body>
 <nav>
     <div>
-        <a href=""><img src="./img/ISB_horiz.png" alt="ISB" style="width: 120px; height: 70px"></a>
+        <a href=""><img src="./img/ISB_horiz.png" alt="ISB" style="width: 254px; height: 70px"></a>
         <ul class="menu">
             <li><a href="#1">HOME</a></li>
             <li><a href="#2">ABOUT US</a></li>
