--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,8 +1,9 @@
 <div class="footer">
-    <p>TEAM Stitch Lilo<br />
-        PROJECT Imaging Sensor fot the Blinds</p>
+    <p>TEAM Stitch Lilo<br>
+        PROJECT Imaging Sensor for the Blind</p>
 </div>
 </section>
+</div>
 <!-- <div id="bg"></div> -->
 
 <ul class="dots dots-left">
