--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,6 +1,6 @@
 <% include include/header %>
 
-<body id="main" class="scroll-container">
+<div id="main" class="scroll-container">
     <!-- Main Page Section -->
     <section class="section1">
     </section>
@@ -50,9 +50,8 @@
                 </div>
             </div>
         </div>
-
-        <% include include/footer %>
-    </section>
+    
+    <% include include/footer %>
     <!-- Swiper JS -->
     <script src="./js/jquery-2.1.1.min.js"></script>
     <!-- Initialize Swiper -->
