--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <% include include/inc_header %>
+    <% include include/header %>
 </head>
-
 <body>
     <% include include/navigator %>
     <div id="main" class="scroll-container">
