--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <% include include/inc_header %>
+        <% include include/header %>
     </head>
     <body>
         
+        <% include include/footer %>
     </body>
 </html>
