모바일 스타일 삭제, sign in/sign up 라우팅 설정, 모바일 페이지 네비게이터 삭제

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -57,7 +57,7 @@
             </div>
             <% include include/footer %>
         </section>
-    </div>
+    </div>mdcmd
     <!-- <div id="bg"></div> -->
 
     <ul class="dots dots-left">
