--- a/views/include/navigator.ejs
+++ b/views/include/navigator.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div>
-        <a href=""><img src="./img/ISB_horiz.png" alt="ISB" style="width: 217px; height: 60px"></a>
+        <a href=""><img src="./img/ISB_horiz.png" alt="ISB" style="width: 190px; height: 52px; padding-top: 4px;"></a>
         <ul class="menu">
             <li><a href="#1">HOME</a></li>
             <li><a href="#2">ABOUT US</a></li>
@@ -8,24 +8,5 @@
         </ul>
     </div>
 </nav>
-<div class="navbar">
-    <a href="#">
-        <span class="bar-1"></span>
-        <span class="bar-2"></span>
-        <span class="bar-3"></span>
-    </a>
-</div>
-<div class="m_menu">
-    <ul>
-        <li><a href="#1">HOME</a></li>
-        <li><a href="#2">ABOUT US</a></li>
-        <li><a href="#3">TEAM</a></li>
-    </ul>
-    <div>
-        <h3>Team Name</h3>
-        <p>Stitch Lilo</p>
-        <h3>EMAIL</h3>
-        <p><a href="kratew@naver.com">kratew@naver.com</a></p>
-    </div>
-</div>
+
 <span class="black_bg" style=""></span>
