--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,7 +4,21 @@
         <% include include/header %>
     </head>
     <body>
-        
-        <% include include/footer %>
+        <section>
+            <div>
+                <div class="leftBox">
+
+                </div>
+                <div class="rightBox">
+                    <h2>Sign In</h2>
+                    <ul>
+                        <li>I D: <input type="text"></li>
+                        <li>PWD: <input type="text"></li>
+                        <li><Input type="submit" value="LogIn"><Input type="reset" value="back"></li>
+                    </ul>
+                </div>
+            </div>
+            <% include include/footer %>
+        </section>
     </body>
 </html>
