--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,14 @@ section:after {content:""; display:block; clear:both;}
 .section8 { background: url('../img/bg8.jpg') no-repeat; }
 .section9  { background-color: #575757; }
 
+.signin { background: url('../img/signin_bg.jpg') no-repeat; } /*수정*/
+.signup { background: url('../img/signin_bg.jpg') no-repeat; }
+.sign { height:60%; padding:5px; background-color: #ffffff88; }
+.sign .rightBox { font-size:20px; color:#000; }
+.sign .rightBox div { margin-bottom: 5px; }
+.sign .rightBox label { text-align: right; width:150px; display: inline-block; color:#000; }
+.sign .rightBox input { font-size:20px; height:auto; width: 200px; color:#000; }
+.sign .rightBox .signBtn { margin-top:10px; margin-left:300px }
 
 section > div, nav div { width: 72%; height: 100%; margin: 0 auto; position:relative; }
 section > div {border: 0px solid red; }
@@ -131,9 +139,11 @@ animation:blink 1s ease-in-out infinite alternate;
 /*.section3 .img2 { left:50%;  top: 180%; transform: translate(-50%, -60%);}*/
 /*.section3 .img3 { left: 50%; top: 120%; transform: translate(-193%, -70%);}*/
 
+.footer { height:auto; width:100%; position:absolute; bottom:0; left:0; padding:15px; background-color:#575757; box-sizing: border-box; text-align: center; color: #afafaf; line-height: 2; word-break: keep-all;}
+
 .section3 { height: 100%; padding-top: 0; box-sizing: border-box; position: relative; }
 .section3>* { width:100%; float:left; }
-.section3>.footer { height:auto; position:absolute; bottom:0; left:0; padding:15px; background-color:#575757; box-sizing: border-box; }
+/* .section3>.footer { height:auto; position:absolute; bottom:0; left:0; padding:15px; background-color:#575757; box-sizing: border-box; } */
 .section3 div p { text-align: center; color: #afafaf; line-height: 2; word-break: keep-all; }
 
 
