--- a/views/include/navigator.ejs
+++ b/views/include/navigator.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div>
-        <a href=""><img src="./img/ISB_horiz.png" alt="ISB" style="width: 190px; height: 52px; padding-top: 4px;"></a>
+        <a href="/"><img src="./img/ISB_horiz.png" alt="ISB" style="width: 190px; height: 52px; padding-top: 4px;"></a>
         <ul class="menu">
             <li><a href="#1">HOME</a></li>
             <li><a href="#2">ABOUT US</a></li>
