--- a/views/main.ejs
+++ b/views/main.ejs
@@ -41,7 +41,7 @@
             </div>
         </section>
         <!-- Team section -->
-        <section class="section4">
+        <section class="sectionTeam">
             <div>
                 <div class="leftBox title">
                     <h2 class="White">Team</h2>
