--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,12 @@
     <div id="main" class="scroll-container">
         <!-- Main Page Section -->
         <section class="section1">
+            <img class="sec1bg" src="./img/t​rapezoid.png">
+            <div>
+                <img src="./img/ISB_verti.png">
+                <a href="/signin"><button>Sign Ip</button></a>
+                <a href="/signup"><button>Sign Up</button></a>
+            </div>
         </section>
         <!-- About Us Section -->
         <section class="section2">
