--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -36,8 +36,8 @@
                     <input type="text" id="phone" />
                 </div>
                 <div>
-                    <label for="serial">Serial Number:</label>
-                    <input type="text" id="serial" />
+                    <label for="serialnumber">Serial Number:</label>
+                    <input type="text" id="serialnumber" />
                 </div>
 
                 <div class="signBtn">
