--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,8 +12,10 @@
             <img class="sec1bg" src="./img/t​rapezoid.png">
             <div>
                 <img src="./img/ISB_verti.png">
-                <a href="/signin"><button>Sign Ip</button></a>
-                <a href="/signup"><button>Sign Up</button></a>
+                <div>
+                    <a href="/signin"><button>SIGN IN</button></a>
+                    <a href="/signup"><button>SIGN UP</button></a>
+                </div>
             </div>
         </section>
         <!-- About Us Section -->
