--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,7 @@ section:after {content:""; display:block; clear:both;}
 .section7 { background-color: #1f5ba9; } /*수정*/
 /* .section7 { background: url('../img/bg7.jpg') no-repeat; } */
 .section8 { background: url('../img/bg8.jpg') no-repeat; }
-.section9  { background-color: #575757; }
+.section9 { background: url('../img/main_bg.jpg') no-repeat; } /*수정*/
 
 
 .section1 .sec1bg { height:125%; margin-top: -135px; margin-left:45%; opacity:0.75; }
@@ -155,7 +155,7 @@ animation:blink 1s ease-in-out infinite alternate;
 /*.section3 .img2 { left:50%;  top: 180%; transform: translate(-50%, -60%);}*/
 /*.section3 .img3 { left: 50%; top: 120%; transform: translate(-193%, -70%);}*/
 
-.footer { height:auto; width:100%; position:absolute; bottom:0; left:0; padding:15px; background-color:#575757; box-sizing: border-box; text-align: center; color: #afafaf; line-height: 2; word-break: keep-all;}
+.footer { height:auto; width:100%; position:absolute; bottom:0; left:0; padding:15px; background-color:#575757dd; box-sizing: border-box; text-align: center; color: #afafaf; line-height: 2; word-break: keep-all;}
 
 .section3 { height: 100%; padding-top: 0; box-sizing: border-box; position: relative; }
 .section3>* { width:100%; float:left; }
