--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,10 +23,9 @@ section { height:100%; background-size: cover !important; background-position: c
 section:after {content:""; display:block; clear:both;}
 
 .section1 { background: url('../img/main_bg.jpg') no-repeat; } /*수정*/
-.section2 { background: url('../img/about_bg.jpg') no-repeat; }
-.sectionTeam { background-color: #15bebe; }
+.section2 { background: url('../img/about2_bg.png') no-repeat; }
+.sectionTeam { background-color: #044778; }
 .section9 { background: url('../img/main_bg.jpg') no-repeat; } /*수정*/
-
 
 .section1 .sec1bg { height:125%; margin-top: -135px; margin-left:45%; opacity:0.75; }
 .section1 div { width:100%; height:100%; position: absolute; top:0; left:0;}
@@ -78,6 +77,7 @@ section > div .leftBox {width: 158px;height: 100%;margin-right: 70px;}
 section > div .rightBox {width: calc(100% - 228px);position: relative;margin-top: 50px;}
 
 .aboutSlide li { width: 100%; height:550px; display: inline-block; overflow-y:auto; }
+.aboutSlide li div p { font-size:18px; }
 .section2 .bx-controls-direction { display: none; }
 .section2 .bx-wrapper { margin: 0; }
 .introduce { margin-bottom: 80px; word-break: keep-all;}
