--- a/views/main.ejs
+++ b/views/main.ejs
@@ -37,8 +37,10 @@
                                 <p class="introduce">
                                     시각 장애인들은 장애를 극복하기 위해 소리가 눈에 보이지 않는 물체로부터 부딪혀 돌아오는 파동을 인지함으로써 자신과 그 물체 사이의 거리를 청각에
                                     의존해 파악한다. <br>
+                                    <br>
                                     따라서, 초음파 센서를 이용하여 시각 장애인들이 소리가 물체에 부딪혀 돌아오는 파동을 인지하는 과정을 대신 해주고, 거리의 차이에 따라 음의 높낮이를
                                     다르게 하여 시각 장애인과 물체간의 거리감을 인지시켜주는 서비스를 개발한다.<br>
+                                    <br>
                                     또한, 기존 내비게이션 기능을 함께 활용하여 음성 안내만으로 사용자가 가고자 하는 길을 안내해주는 동시에 보행 시 전방의 위험 지역이나 방해물을
                                     알려주어 시각 장애인들을 위한 보다 안전한 일상 생활을 만들어 줄 수 있는 서비스를 기대할 수 있다.
                                 </p>
@@ -70,7 +72,7 @@
         <section class="sectionTeam">
             <div>
                 <div class="leftBox title">
-                    <h2 class="White">Team</h2>
+                    <h2 class="white">Team</h2>
                 </div>
                 <div class="rightBox">
                     <div>
