--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
 
 <body>
     <% include include/navigator %>
-    <section class="signup">
+    <section class="sectionSign">
         <div class="sign">
             <div class="leftBox">
                 <h2>Sign Up</h2>
