--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ article, nav, article, section, aside, canvas, details, figcaption, figure, hgro
 * { margin:0; padding:0; border:0; font-size:100%; vertical-align:baseline; background:transparent; border-collapse:collapse;}
 html,body { width:100%; height:100%; font-family: 'Nanum Gothic', '나눔고딕'; color: #3d3d3d; line-height:1.5; font-size: 14px; position:relative; }
 article, nav, article, section, aside, canvas, menu, details, figcaption, figure, footer { display:block;  }
-ul, ol, li {list-style:none; }
+ul, ol, li { list-style:none; }
 a { margin:0; padding:0; font-size:100%; text-decoration:none; vertical-align:baseline; color:inherit; background:transparent; }
 img { vertical-align:top; }
 table { border-collapse:collapse; border-spacing:0; }
@@ -33,8 +33,8 @@ section:after {content:""; display:block; clear:both;}
 .section1 div div { font-size: 30px; margin-top:40%; margin-left:58%; }
 .section1 div div a button { border-style:solid; border-width:2px; color:#fff; margin-right:20px; padding:3px; padding-left:6px; padding-right:6px; }
 
-.signin { background: url('../img/signin_bg.jpg') no-repeat; } /*수정*/
-.signup { background: url('../img/signin_bg.jpg') no-repeat; }
+/* sign in up page */
+.sectionSign { background: url('../img/sign_bg.jpg') no-repeat; } /*수정*/
 .sign { height:60%; padding:5px; background-color: #ffffff88; }
 .sign .rightBox { font-size:20px; color:#000; }
 .sign .rightBox div { margin-bottom: 5px; }
