--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -8,7 +8,7 @@
 
 <body>
     <% include include/navigator %>
-    <section class="signin">
+    <section class="sectionSign">
         <div class="sign">
             <div class="leftBox">
                 <h2>Sign In</h2>
