--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://fonts.googleapis.com/css?family=Jua&subset=korean);
 
 html, body, div, h1, h2, h3, h4, h5, h6, p, ol, ul, li, dl, dt, dd,
 fieldset, form, label, legend, button,
@@ -154,3 +155,21 @@ border-radius: 10px; -webkit-border-radius: 10px; -moz-border-radius: 10px; -ms-
 }
 
 .about2 > div:nth-child(4) { margin-left: 20%; margin-right: 8%;}
+
+
+
+
+/* 폰트 설정 */
+.section2 .keytwo {
+    display:block;
+    text-align:justify;
+    font-family: "BenchNine";
+    line-height:0.8;
+    text-transform:uppercase;
+    letter-spacing:0px;
+  }
+
+.section2 .introduce, .about2 {
+    font-family: 'Jua', sans-serif;
+    color:#9BC5DE; }
+
