섹션 배경, 글꼴

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -22,7 +22,7 @@
         </section>
         <!-- About Us Section -->
         <section class="section2">
-            <div>
+            <div class="aboutBox">
                 <div class="leftBox title">
                     <h2>About Us</h2>
                     <div class="pager">
@@ -35,6 +35,7 @@
                         <li>
                             <div class="keyword">
                                 <p class="introduce">
+                                <br><br>
                                     시각 장애인들은 장애를 극복하기 위해 소리가 눈에 보이지 않는 물체로부터 부딪혀 돌아오는 파동을 인지함으로써 자신과 그 물체 사이의 거리를 청각에
                                     의존해 파악한다. <br>
                                     <br>
@@ -70,16 +71,16 @@
         </section>
         <!-- Team section -->
         <section class="sectionTeam">
-            <div>
+            <div class="teamBox">
                 <div class="leftBox title">
                     <h2 class="white">Team</h2>
                 </div>
                 <div class="rightBox">
                     <div>
                         <ul>
-                            <li><span>김휘림</span><span>가천대학교 컴퓨터공학과</span></li>
-                            <li><span>우대철</span><span>가천대학교 컴퓨터공학과</span></li>
-                            <li><span>최성원</span><span>가천대학교 컴퓨터공학과</span></li>
+                            <li><span class="teamname">김휘림</span><span>가천대학교 컴퓨터공학과</span></li>
+                            <li><span class="teamname">우대철</span><span>가천대학교 컴퓨터공학과</span></li>
+                            <li><span class="teamname">최성원</span><span>가천대학교 컴퓨터공학과</span></li>
                         </ul>
                     </div>
                 </div>
