--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,8 +62,7 @@ nav { position: fixed; left: 0; top: 0; width: 100%; height: 60px; background:rg
 /*nav div > a img { margin-top: 7px;}*/
 .menu { float: right; margin-top: -4px;}
 .menu li { display: inline-block; margin-left:30px; }
-.menu li:last-child { margin-left: 10px; }
-.menu li a { display: block; font-size: 16px; font-weight: bold; color: #555; padding: 20px 5px; }
+.menu li a { display: block; font-size: 16px; font-weight: bold; color: #fff; padding: 20px 5px; }
 .menu li a:hover { color: #07ac7f; }
 
 
