--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ section > div .rightBox {width: 50%; position: relative; margin-top: 30px;}
 .section9 > div .rightBox { height: 80%; width: 85%; float: left;}
 .section9 .user_info { width: 10%; margin-top: 50px; float: left; }
 
-#map_div { height: 98%; position: relative; margin-left: 3% }
+#map_div { width:90%; height: 98%; position: relative; margin-left: 3% }
 #Tmap_Map { width: 100%; height: 100%; border-style: double; border-width: 5px; border-style: double; border-width: 5px; }
 
 @media screen and (max-width: 1295px) {
