네이버 로그인

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,10 +15,7 @@
             <div>
                 <img src="./img/ISB_verti.png">
                 <div>
-                    <form action="/login" method="post">
-                        <input type="text" id="sn" name="sn" placeholder="S/N 입력" required />
-                        <input type="submit" id="btn" name="btn" value="인증">
-                    </form>
+                    <a href="/login/auth/naver"><button>NAVER SIGN IN</button></a>
                     <!--<a href="/signin"><button>S/N LOGIN</button></a>-->
                     <!--<a href="/signup"><button>SIGN UP</button></a>-->
                 </div>
